feat: add hosting configuration to firebase.json

--- a/firebase.json
+++ b/firebase.json
@@ -14,6 +14,20 @@
     },
     "singleProjectMode": true
   },
+  "hosting": {
+    "public": "dist/public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
   "functions": [
     {
       "source": "functions",
